# ai-agents

./: README.md  pyproject.toml
1_phidata_finance_agent/: 2_finance_agent_llama.py  3_agent_teams_openai.py
